--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://strongball.github.io/react-pytorch-onnx",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -20,6 +22,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "@types/ndarray": "^1.0.8",
-    "@types/ndarray-ops": "^1.2.0"
+    "@types/ndarray-ops": "^1.2.0",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
