--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
   "homepage": "https://strongball.github.io/react-pytorch-onnx",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --coverage",
+    "deploy": "npx gh-pages -d build"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.3",
@@ -27,10 +29,13 @@
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "npx gh-pages -d build"
+  "devDependencies": {
+    "@types/ndarray": "^1.0.8",
+    "@types/ndarray-ops": "^1.2.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.1"
   },
   "browserslist": {
     "production": [
@@ -43,10 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/ndarray": "^1.0.8",
-    "@types/ndarray-ops": "^1.2.0",
-    "@types/react-router-dom": "^5.1.7"
   }
 }
