--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "ndarray": "^1.0.19",
     "ndarray-ops": "^1.2.2",
-    "onnxjs": "^0.1.8",
+    "onnxruntime-web": "^1.9.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -30,12 +30,12 @@
     "web-vitals": "^1.1.0"
   },
   "devDependencies": {
-    "@types/ndarray": "^1.0.8",
-    "@types/ndarray-ops": "^1.2.0",
-    "@types/react-router-dom": "^5.1.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1"
+    "@testing-library/user-event": "^12.8.1",
+    "@types/ndarray": "^1.0.8",
+    "@types/ndarray-ops": "^1.2.0",
+    "@types/react-router-dom": "^5.1.7"
   },
   "browserslist": {
     "production": [
