--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "homepage": "https://strongball.github.io/react-pytorch-onnx",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --coverage",
     "deploy": "npx gh-pages -d build"
   },
   "dependencies": {
@@ -15,17 +15,20 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.1",
+    "copy-webpack-plugin": "^10.2.4",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "ndarray": "^1.0.19",
     "ndarray-ops": "^1.2.2",
-    "onnxruntime-web": "^1.9.0",
+    "onnxruntime-web": "^1.10.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
   },
